Create the jee mains homepage

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="options">
-            <a href="{{ url_for('jee_mains') }}" class="option-btn jee">🚀 JEE Mains</a>
+            <a href="jee_main_homepage.html" class="option-btn jee">🚀 JEE Mains</a>
             <a href="{{ url_for('gate') }}" class="option-btn gate">🎓 GATE</a>
         </div>
     </div>
